Bug 161903 - Download progress is not updated
Summary: Download progress is not updated
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-10 16:34 UTC by András Manţia
Modified: 2008-07-16 23:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description András Manţia 2008-05-10 16:34:55 UTC
Version:            (using Devel)
Installed from:    Compiled sources
OS:                Linux

While downloading a torrent, I requested to show the details. After a while I was amazed it is still at 1% even if many chunks were downloaded. If I closed/reopened the details the progress bar got updated.
Comment 1 András Manţia 2008-05-10 16:37:21 UTC
See kget1.png from bug 161902 for an example, where the details show 8%, although it should be more.
Comment 2 Urs Wolfer 2008-07-16 23:34:44 UTC
SVN commit 833484 by uwolfer:

* fix percent display in torrent details widget
BUG:161903
* clear button in history widget filter line edit

 M  +4 -1      transfer-plugins/bittorrent/bttransfer.cpp  
 M  +16 -2     ui/history/transferhistory.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=833484