Backport: SVN commit 833484 by uwolfer:

* fix percent display in torrent details widget
BUG:161903
* clear button in history widget filter line edit

svn path=/branches/KDE/4.1/kdenetwork/kget/; revision=833489